# GEMA_RUST

./: .gitignore  Cargo.toml  Datenbank.json  GEMA_Launcher_Setup.iss  Labelcodes.txt  README.md  app.rs  datenbank.csv  datenbank.sqlite  export.rs  labelcodes.json  labelcodes.rs  main.rs  model.rs  my_database.db  parser.rs  test data.txt  ui.rs
.github/workflows/: release.yml
src/: app.rs  export.rs  labelcodes.rs  main.rs  parser.rs  ui.rs
src/assets/: databank.db
