[package]
name = "GEMA_Launcher"
version = "0.1.2"
edition = "2021"

[dependencies]
eframe = "0.22"
image = "0.24"
egui = "0.22"
rfd = "0.15.1"
regex = "1.7"
csv = "1.1"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winapi = { version = "0.3", features = ["winuser", "windef"] }
anyhow = "1"
#rusqlite = "0.32.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[target.x86_64-pc-windows-gnu]
linker = "zig cc"
rustflags = ["-C", "target-feature=+crt-static"]